welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:4: error: type mismatch;
 found   : Int(10)
 required: Boolean
    if (n<=1 || n>=10) {return 10}
                               ^